# hex_map_bevy

./: .gitignore  Cargo.toml  README.md  build.rs  hex_map_bevy-6117ed0347e00a6d.js  hex_map_bevy-b182f3d42c8afdfe.js  hex_map_bevy-b275eff5f32bfef9.js  hex_map_bevy-bab51a5a252bad80.js  hex_map_bevy-f6524a7639476edc.js  index-1c876cfcd2323b68.js  index-d3057e847f7e4da6.js  index-dd620441f58d8713.js  index.html
.github/workflows/: deploy-page.yaml
assets/hexes/: A001.hex  A002.hex  A003.hex  A004.hex  A005.hex  A006.hex  A007.hex  A008.hex  A009.hex  A010.hex  A011.hex  A012.hex  A013.hex  A014.hex  A015.hex  A016.hex  A017.hex  A018.hex  A019.hex  A020.hex  A021.hex  A022.hex  A023.hex  A024.hex  A025.hex  A026.hex  A027.hex  C001.hex  C002.hex  C003.hex  C004.hex  C005.hex  C006.hex  C007.hex  C008.hex  D001.hex  D002.hex  D003.hex  D004.hex  D005.hex  (+81 more)
assets/models/: blank.glb  cool_hex.glb
assets/models/blender files/: batch_export.py  bland_hex.blend  cool_hex.blend  cool_hex.blend1  cool_hex.glb
credits/: CREDITS.md
src/: board.rs  lib.rs  loading.rs  main.rs  todo.md  ui.rs  world.rs
src/loading/: hex.rs  hex_descriptions.rs  hex_models.rs  hexes.rs
