[package]
name = "hex_map_bevy"
version = "0.1.0"
publish = false
authors = ["Troels Dalsgaard Hoffmeyer <troels.d.hoffmeyer@gmail.com>"]
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[features]
default = [
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy/x11",
    "bevy_kira_audio/ogg"
]

dev = [
    "bevy/dynamic",
]

[dependencies]
bevy = { version = "0.8", default-features = false }
bevy_kira_audio = { version = "0.11" }
bevy_asset_loader = { version = "0.12" }
#bevy_mod_picking = "0.6.1"
#bevy_4x_camera = {git = "https://github.com/Troels51/bevy_4x_camera.git", branch = "master"}
typetag = "0.1"
serde = "1.0"
rand = "0.8.3"
hex2d = "1.1.0"
bevy_common_assets = { version = "0.3.0", features = ["ron"]}
#bevy_editor_pls = {git = "https://github.com/jakobhellermann/bevy_editor_pls.git", branch = "main"}
bevy_egui = "0.15"


[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.25", features=["x11"]}

[build-dependencies]
embed-resource = "1.4"