[package]
name = "hex_map_bevy"
version = "0.1.0"
publish = false
authors = ["Troels Dalsgaard Hoffmeyer <troels.d.hoffmeyer@gmail.com>"]
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[dependencies]
bevy = { version = "0.11" }
bevy_asset_loader = { version = "0.17" }
typetag = "0.1"
serde = "1.0"
rand = "0.8.3"
hex2d = "1.1.0"
bevy_common_assets = { version = "0.7.0", features = ["ron"]}
bevy_egui = "0.22"


[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.28", features=["x11"]}

[build-dependencies]
embed-resource = "1.4"